syntax/tests/parsing/errors/typexpr/typeVar.res
type x<'A> = '_
type x<'A> = 'let
